Fixed bug 38115: Remove newInstance() deprecation warning.
This fix removes clazz.newInstance() deprecation in JDK9.

--HG--
extra : rebase_source : 34f23a4c68c0b491c57d951a0e050544d2cd007d